--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,8 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+
+    # Ci dessous les lignes permettent de dire que toutes les personnes qui souhaitent accéder au pages compte ou commande doivent avoir le rôle user
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/compte, roles: ROLE_USER }
