Commentaire cryptage mot de passe
- Commentaire d'explication dans security.yaml
- Commentaire pour crypter un mot de passe saisie par l'utilisateur

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: auto
+            algorithm: auto #symfony doit utiliser automatiquement la meilleur méthode de cryptage
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
