--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,7 @@ security:
     # Note: Only the *first* access control that matches will be used
 
     # Ci dessous les lignes permettent de dire que toutes les personnes qui souhaitent accéder au pages compte ou commande doivent avoir le rôle user
+    # toutes les personnes ayant le role user peuvent accéder a une page qui a dans son url compte ou commande
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/compte, roles: ROLE_USER }
